--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "reselect": "^4.0.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
