--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "react-restaurant",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "concurrently": "^6.2.1",
     "enzyme": "^3.11.0",
     "immer": "^9.0.6",
     "prop-types": "^15.7.2",
@@ -20,7 +22,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"node simple_api/server.js\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
