--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
