--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "classnames": "^2.3.1",
     "concurrently": "^6.2.1",
     "connected-react-router": "^6.9.1",
     "enzyme": "^3.11.0",
