added configs for app deployment on github pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-restaurant",
   "version": "0.1.0",
+  "homepage": "https://y-dubovitsky.github.io/restaurant-react/",
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
@@ -31,7 +32,9 @@
     "start": "concurrently \"react-scripts start\" \"node simple_api/server.js\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
